<?xml version="1.0" encoding="utf-8"?>
<com.kinghorn.justtasks.DetailView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/task_title_input"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="24dp"
            android:paddingRight="24dp"
            android:paddingBottom="16dp">

            <LinearLayout
                android:id="@+id/top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/top_items"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/details_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/details_title_default"
                        android:textColor="@color/offWhite"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/details_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/details_date_default"
                        android:textColor="@color/offWhite"
                        android:textSize="10sp"
                        android:textStyle="italic" />
                </LinearLayout>

                <CheckBox
                    android:id="@+id/task_complete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@drawable/task_checkbox"
                    android:gravity="start|right" />
            </LinearLayout>

            <TextView
                android:id="@+id/details_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/details_description_default"
                android:textColor="@color/offWhite"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/details_delete"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="4dp"
                android:layout_weight="2"
                android:background="@drawable/modal_action_left"
                android:src="@drawable/trash_2" />

            <Button
                android:id="@+id/close_details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@drawable/modal_action_middle"
                android:text="@string/details_close"
                android:textColor="@color/offWhite"
                android:textColorHighlight="@color/offWhite"
                android:textColorHint="@color/offWhite"
                android:textColorLink="@color/offWhite"
                app:backgroundTint="@color/editTaskInputNormal"
                app:strokeColor="@color/offWhite" />

            <ImageButton
                android:id="@+id/details_confirm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_weight="2"
                android:background="@drawable/modal_action_right"
                android:src="@drawable/edit_3" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/items"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/add_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:background="@drawable/task_title_input"
            android:ems="10"
            android:hint="@string/task_title"
            android:inputType="text"
            android:paddingLeft="24dp"
            android:paddingTop="16dp"
            android:paddingRight="24dp"
            android:paddingBottom="16dp" />

        <EditText
            android:id="@+id/add_desc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:background="@drawable/task_content_input"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:paddingLeft="24dp"
            android:paddingTop="16dp"
            android:paddingRight="24dp"
            android:paddingBottom="16dp" />

        <LinearLayout
            android:id="@+id/add_actions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/add_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@drawable/modal_action_left"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:src="@drawable/x" />

            <ImageButton
                android:id="@+id/add_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:alpha="0.5"
                android:background="@drawable/modal_action_right"
                android:enabled="false"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:src="@drawable/check" />
        </LinearLayout>
    </LinearLayout>
</com.kinghorn.justtasks.DetailView>