<?xml version="1.0" encoding="utf-8"?>
<com.kinghorn.justtasks.AddTask xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/items"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="8dp"
            android:text="@string/add_task"
            android:textAlignment="center"
            android:textColor="@color/offWhite"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/add_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:background="@drawable/task_title_input"
            android:ems="10"
            android:hint="@string/task_title"
            android:inputType="text"
            android:paddingLeft="24dp"
            android:paddingTop="16dp"
            android:paddingRight="24dp"
            android:paddingBottom="16dp" />

        <EditText
            android:id="@+id/add_desc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:background="@drawable/task_content_input"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:paddingLeft="24dp"
            android:paddingTop="16dp"
            android:paddingRight="24dp"
            android:paddingBottom="16dp" />

        <LinearLayout
            android:id="@+id/add_actions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/add_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@drawable/modal_action_left"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:src="@drawable/x" />

            <ImageButton
                android:id="@+id/add_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:alpha="0.5"
                android:background="@drawable/modal_action_right"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:src="@drawable/check"
                android:enabled="false"/>
        </LinearLayout>
    </LinearLayout>
</com.kinghorn.justtasks.AddTask>