<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:id="@+id/setting_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp">

        <LinearLayout
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/back"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="4dp"
                android:background="@drawable/top_action"
                android:foregroundGravity="center_vertical"
                android:src="@drawable/arrow_left" />

            <TextView
                android:id="@+id/setting_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:background="@drawable/top_action_left"
                android:gravity="center_vertical"
                android:paddingLeft="24dp"
                android:text="@string/settings_title"
                android:textColor="@color/searchBarFocused"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/clear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/clear_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/clear_data" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:text="@string/clear_explanation"
                    android:textAlignment="center"
                    android:textColor="@color/itemActionPressed"
                    android:textSize="12sp"
                    android:textStyle="italic" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <com.kinghorn.justtasks.BusySpinner
        android:id="@+id/busy"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</androidx.constraintlayout.widget.ConstraintLayout>