<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/modal_shade"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.8"
        android:background="#000000">

    </FrameLayout>

    <LinearLayout
        android:id="@+id/modal_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/modal_space"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.75"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="16dp">

            <FrameLayout
                android:id="@+id/modal_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/modal_frame">

                <LinearLayout
                    android:id="@+id/content_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingTop="14dp"
                        android:paddingBottom="16dp">

                        <TextView
                            android:id="@+id/modal_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/modal_title_divider"
                            android:paddingLeft="24dp"
                            android:paddingRight="24dp"
                            android:paddingBottom="8dp"
                            android:text="@string/modal_title_placeholder"
                            android:textColor="@color/searchBarFocused"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/modal_message"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="24dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginRight="24dp"
                            android:text="@string/modal_description_placeholder"
                            android:textColor="@color/white"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/modal_actions"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:padding="8sp">

                        <Button
                            android:id="@+id/modal_cancel"
                            style="@android:style/Widget.DeviceDefault.Button.Borderless"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="4dp"
                            android:layout_weight="1"
                            android:background="@drawable/modal_action_left"
                            android:text="@string/cancel"
                            android:textColor="#FF9999"
                            app:backgroundTint="#3a1e1e" />

                        <Button
                            android:id="@+id/modal_confirm"
                            style="@android:style/Widget.DeviceDefault.Button.Borderless"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:layout_weight="1"
                            android:background="@drawable/modal_action_right"
                            android:elevation="0dp"
                            android:text="@string/confirm"
                            android:textColor="#8cb15b"
                            app:backgroundTint="#2e3a1e" />
                    </LinearLayout>

                </LinearLayout>
            </FrameLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>
</FrameLayout>