<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/top_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <LinearLayout
                android:id="@+id/searchbox"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginRight="6dp"
                android:layout_weight="1"
                android:background="@drawable/search_frame"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <ImageView
                    android:id="@+id/search_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/search" />

                <EditText
                    android:id="@+id/search_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:hint="@string/search"
                    android:inputType="text"
                    android:textSize="20sp" />

                <ImageButton
                    android:id="@+id/clear_search"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/x"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/top_actions"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:gravity="right|center_vertical"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/add_action"
                    style="@style/Widget.AppCompat.ImageButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginRight="6dp"
                    android:background="@drawable/top_action"
                    android:src="@drawable/plus" />

                <ImageButton
                    android:id="@+id/settings_action"
                    style="@style/Widget.AppCompat.ImageButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/top_action"
                    android:src="@drawable/settings" />

            </LinearLayout>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/main_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/loading_frame"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical">

                <ProgressBar
                    android:id="@+id/loading_progress"
                    style="@android:style/Widget.ProgressBar"
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:layout_gravity="center_vertical"
                    android:indeterminateDrawable="@drawable/circular_progress"
                    android:progressDrawable="@drawable/circular_progress"
                    android:visibility="visible" />
            </FrameLayout>

            <LinearLayout
                android:id="@+id/content_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/action_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/task_details"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0"
                        android:orientation="vertical"
                        android:paddingLeft="24dp"
                        android:paddingTop="8dp"
                        android:paddingRight="24dp"
                        android:paddingBottom="8dp"
                        android:visibility="gone">

                        <LinearLayout
                            android:id="@+id/detail_layout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/task_item_frame"
                            android:orientation="vertical"></LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/add_task_modal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingLeft="24dp"
                        android:paddingTop="8dp"
                        android:paddingRight="24dp"
                        android:paddingBottom="8dp"
                        android:visibility="gone">

                        <FrameLayout
                            android:id="@+id/add_task_root"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <LinearLayout
                                android:id="@+id/add_task_fields"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                                <EditText
                                    android:id="@+id/new_task_title"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/task_title_input"
                                    android:ems="10"
                                    android:hint="@string/task_title"
                                    android:inputType="text"
                                    android:paddingLeft="24dp"
                                    android:paddingTop="16dp"
                                    android:paddingRight="24dp"
                                    android:paddingBottom="16dp" />

                                <EditText
                                    android:id="@+id/new_task_description"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginTop="8dp"
                                    android:layout_weight="1"
                                    android:background="@drawable/task_content_input"
                                    android:ems="10"
                                    android:gravity="start|top"
                                    android:hint="@string/task_description"
                                    android:inputType="textMultiLine"
                                    android:paddingLeft="24dp"
                                    android:paddingTop="24dp"
                                    android:paddingRight="24dp"
                                    android:paddingBottom="24dp" />

                                <LinearLayout
                                    android:id="@+id/add_task_actions"
                                    android:layout_width="match_parent"
                                    android:layout_height="52dp"
                                    android:layout_marginTop="8dp"
                                    android:orientation="horizontal">

                                    <ImageButton
                                        android:id="@+id/cancel_add"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginRight="4dp"
                                        android:layout_weight="1"
                                        android:background="@drawable/action_left"
                                        android:paddingTop="16dp"
                                        android:src="@drawable/x" />

                                    <ImageButton
                                        android:id="@+id/confirm_add"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginLeft="4dp"
                                        android:layout_weight="1"
                                        android:background="@drawable/action_right"
                                        android:paddingTop="16dp"
                                        android:src="@drawable/check" />
                                </LinearLayout>
                            </LinearLayout>
                        </FrameLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/task_list_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/tasks"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingLeft="24dp"
                        android:paddingRight="24dp">


                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/task_recycler"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/empty_notice"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_horizontal|center_vertical"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <ImageView
                            android:id="@+id/alert_circle"
                            android:layout_width="match_parent"
                            android:layout_height="64dp"
                            android:src="@drawable/alert_circle" />

                        <TextView
                            android:id="@+id/empty_message"
                            android:layout_width="240dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/no_tasks"
                            android:textAlignment="center"
                            android:textColor="@color/modalButtonDisabled"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>